Fix spacing for initialised paragraphs

--- a/src/writing/translations/erotica/lettering.css
+++ b/src/writing/translations/erotica/lettering.css
@@ -1,3 +1,7 @@
+.initialised {
+  text-indent: 0.15em;
+}
+
 .initialised::first-letter {
   float: left;
   font-size: 3.1em;
